# neo-tariff-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  openapi-sdk.json  pyproject.toml
.github/workflows/: check-changelog.yml  publish-testpypi.yml  publish.yml  test.yml
examples/: basic_duty_calc.py  batch_calculation.py  search_and_lookup.py
neo_tariff/: __init__.py  _config.py  _http.py  _raw.py  _types.py  async_client.py  client.py  exceptions.py
neo_tariff/resources/: __init__.py  _base.py  agent.py  compare.py  context.py  rates.py  search.py  versions.py
neo_tariff/types/: __init__.py  agent.py  compare.py  context.py  countries.py  rates.py  requests.py  search.py  shared.py  versions.py
scripts/: check_drift.py
tests/: conftest.py  test_client.py  test_integration.py  test_parity.py  test_raw.py  test_retry.py  test_types.py
