[project]
name = "neo-tariff"
dynamic = ["version"]
description = "Python SDK for the Neo Tariff API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
    "eval-type-backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "neo_tariff/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["neo_tariff"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that hit a real API (skipped by default, requires NEO_TARIFF_TEST_API_KEY)",
]
addopts = "-m 'not integration'"
